# ldf2

./: .gitignore  CMakeLists.txt  README.md
include/: Strings.h  base.h  version.tcc
include/time/: Date.h  DateTime.h  Time.h
src/: Strings.cpp
src/time/: Date.cpp  DateTime.cpp  Time.cpp
test/time/: testDate.cpp  testTime.cpp
